package org.example.bahavioral.observer.observer;

public interface Observer {
    void update(float temp, float humidity, float pressure);
}
